<resources>
    <string name="app_name">Daily Selfie</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_display_name">Display name</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reminders">Reminders</string>
    <string name="reminde_me">Remind me</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Validation Message-->
    <string name="mandatory_email">You must provide an email</string>
    <string name="invalid_email">You must provide a valid email</string>
    <string name="mandatory_password">You must provide a password</string>
    <string name="invalid_password">Password length must not be less than six characters</string>
    <string name="mandatory_display_name">You must provide a display name</string>
    <string name="selfies">Selfies</string>
    <string name="selfies_effects">Selfie Effects</string>


    <!--Error Messages -->
    <string name="network_unavailable">Network connection is un-available</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="title_activity_main">Daily Selfie</string>
    <string name="action_settings">Settings</string>
    <string name="try_again">Please try again</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="black_white">Black and White Effect</string>
    <string name="tint_effect">Tint Effect</string>
    <string name="comic_effect">Comic Effect</string>
    <string name="applying">Applying\u0020</string>
    <string name="applying_done">Done Applying Effects</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reminder_note">DonU+0027t forget to take a selfie today</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
